backend/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loviq-backend
  labels:
    app: loviq-backend
spec:
  ports:
  - port: 80
    targetPort: 4000
    protocol: TCP
    name: http
  selector:
    app: loviq-backend
  type: ClusterIP
